--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "desktop",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "",
+  "dependencies": {
+    "next": "10.0.7",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ArunTeltia/desktop"
+  },
+  "author": "Arun Teltia",
   "license": "MIT"
 }
