--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "url": "git+https://github.com/ArunTeltia/desktop"
   },
   "author": "Arun Teltia",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.1.5"
+  }
 }
