--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "eslint": "eslint .",
-    "stylelint":"stylelint **/*.scss"
+    "stylelint": "stylelint **/*.scss",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "next": "10.0.7",
@@ -28,11 +29,13 @@
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.1.3"
+    "prettier": "2.2.1",
+    "typescript": "^4.1.5"
   }
 }
