Added Jest Support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,14 @@
   "env": {
     "browser": true,
     "es2021": true,
+    "jest": true,
     "node": true
   },
   "extends": [
     "airbnb",
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
     "plugin:react/recommended",
     "prettier"
   ],
@@ -22,10 +24,13 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "jest", "react", "simple-import-sort"],
   "rules": {
+    "max-lines": ["error", 80],
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "simple-import-sort/exports": "error",
+    "simple-import-sort/imports": "error"
   },
   "settings": {
     "import/parsers": {
