--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "next start",
     "eslint": "eslint .",
     "stylelint": "stylelint **/*.scss",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.32.8",
-    "stylelint-config-standard": "^20.0.0"
+    "sass": "^1.32.8"
   },
   "repository": {
     "type": "git",
@@ -23,19 +24,31 @@
   "author": "Arun Teltia",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^14.14.19",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^4.3.7",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
-    "typescript": "^4.1.5"
+    "stylelint": "^13.8.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-config-standard": "^20.0.0",
+    "typescript": "^4.1.3"
   }
 }
