--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-prettier"]
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-prettier",
+    "stylelint-config-sass-guidelines",
+    "stylelint-config-styled-components"
+  ],
+  "processors": ["stylelint-processor-styled-components"]
 }
