--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "stylelint-config-sass-guidelines": "^7.1.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^4.1.3"
   },
   "husky": {
@@ -66,6 +65,6 @@
   "lint-staged": {
     "*": "prettier --write",
     "*.{js,ts,tsx}": "eslint --fix",
-    "*.tsx": "stylelint"
+    "*.tsx": "stylelint --fix"
   }
 }
